--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "cypress:run": "cypress run"
   },
   "devDependencies": {
-    "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-plugin-cypress": "^2.0.1"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/davegahn/april_loftschool_react_homeworks.git",
+  "author": "daveghan <anxieter@yandex.ru>",
+  "license": "MIT"
 }
