--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cypress": "^2.1.0",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-redux": "^5.0.7",
